doc: theme css: avoid double borders on highlights
This tweaks the special case of double borders when RST content from a
parsed-literal block lives inside a highlight container, for example:

RST:

```
.. container:: highlight highlight-bash notranslate

   .. parsed-literal::

      python\ |python_min_minor| --version
```

--- a/doc/_static/css/common.css
+++ b/doc/_static/css/common.css
@@ -107,3 +107,8 @@ a > span.devicetree {
 ul.edge-pinout > li {
   list-style: none !important;
 }
+
+/* tweak literal-block border inside a RST highlight container */
+.rst-content div[class^=highlight] > pre.literal-block {
+  border: none !important;
+}
